Seperate from template
Saved copy separate from template to preserve the initial template for reference

--- a/PrivacyDefense.tex
+++ b/PrivacyDefense.tex
@@ -117,7 +117,7 @@ University of Jean Monnet \\ % Your institution for the title page
 
 \subsection{Subsection Example} % A subsection can be created just before a set of slides with a common theme to further break down your presentation into chunks
 
-\begin{frame}
+\begin{frame} %frame beans slide I think
 \frametitle{Paragraphs of Text}
 Sed iaculis dapibus gravida. Morbi sed tortor erat, nec interdum arcu. Sed id lorem lectus. Quisque viverra augue id sem ornare non aliquam nibh tristique. Aenean in ligula nisl. Nulla sed tellus ipsum. Donec vestibulum ligula non lorem vulputate fermentum accumsan neque mollis.\\~\\
 
