Emptied template, fixed graphicspath, added databreaches image

--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -83,16 +83,14 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[The best privacy defense is a good privacy offense]{The best privacy defense is a good privacy offense:
+\title[]{} % The short title appears at the bottom of every slide, the full title is only on the title page
 
-obfuscating a search engine user’s profile} % The short title appears at the bottom of every slide, the full title is only on the title page
-
-\author{Joshua Fenech, Omar Salbrout} % Your name
-\institute[MLDM] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
+\author{} % Your name
+\institute[] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {
 University of Jean Monnet \\ % Your institution for the title page
 \medskip
-\textit{jfenech22@hotmail.com} % Your email address
+\textit{} % Your email address
 }
 \date{\today} % Date, can be changed to a custom date
 
