Putting text next to image

--- a/PrivacyDefense.tex
+++ b/PrivacyDefense.tex
@@ -119,13 +119,29 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Bullet Points}
-\begin{itemize}
-\item Data breaches are commonplace today
-\item \begin{figure}
-\includegraphics[width=0.8\linewidth]{biggest-data-breaches.jpg}
-\end{figure}
-\end{itemize}
+\frametitle{Companies can't be trusted}
+\begin{minipage}{0.4\textwidth}
+	\vbox to \textheight{
+		\vfill
+		\centering
+		\includegraphics[width=1\textwidth]{biggest-data-breaches.jpg}
+		\vfill
+	}
+\end{minipage}\hfill
+\begin{minipage}{0.6\textwidth}
+	\vbox to \textheight{
+		\begin{itemize}
+			\item 1 We trust that companies will protect our data
+			\item 2 Bata breaches are commonplace today
+			\item 3 Unencrypted data is often leaked
+			\item 4 Can we encrypt data before it is stored?
+			%\item 5
+			%\item 6
+		\end{itemize}
+		\vfill
+	}
+\end{minipage}
+
 \end{frame}
 
 %------------------------------------------------
