--- a/PrivacyDefense.tex
+++ b/PrivacyDefense.tex
@@ -146,11 +146,10 @@ eprint=false
 	\vbox to \textheight{
 		\begin{itemize}
 			\item We trust that companies will protect our data
-			\item Bata breaches are commonplace today
+			\item Data breaches are commonplace today
 			\item Unencrypted data is often leaked
-			\item There is currently no or little legal requirement 
-			\item 
-			\item Can we encrypt data before it is stored?
+			\item There is currently no or little legal requirement to protect data, and therefore represents an additional cost that some companies try to avoid
+			\item Can we encrypt our own data before it is submitted to such companies?
 		\end{itemize}
 		\vfill
 	}
@@ -161,13 +160,25 @@ eprint=false
 %------------------------------------------------
 
 \begin{frame}
-
+\frametitle{Other methods of obfuscation}
+\begin{itemize}
+	\item Private browsing - no cookies stored, but... IP still revealed
+	\item Proxy servers to hide IP - web browser fingerprints still revealed
+	\item Ultimately, TOR for maximum anonymity
+	\item Problem - lose benefits that personalisation of websearches provides
+	\item Can an alternative means of securing privacy without more intensive [change intensive here] methods be found?
+\end{itemize}
 \end{frame}
-
 %------------------------------------------------
 
 \begin{frame}
-
+\frametitle{Structure of Paper}
+\begin{itemize} %Copied this directly from p3 we 
+	\item 
+	\item Presents a new method of obfuscation related to adversarial data mining
+	\item Approach is explored in common setting of Internet search engines
+	\item A learning method is presented for environments where a user can get feedback from her or his counterpart
+\end{itemize}
 \end{frame}
 
 %------------------------------------------------
