--- a/PrivacyDefense.tex
+++ b/PrivacyDefense.tex
@@ -128,7 +128,7 @@ eprint=false
 
 
 %------------------------------------------------
-
+\section{Introduction}
 \begin{frame}
 \frametitle{Companies can't be trusted}
 \begin{minipage}{0.4\textwidth}
@@ -172,8 +172,8 @@ eprint=false
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Structure of Paper}
-\begin{itemize} %Copied this directly from p3 we 
+\frametitle{Structure of Presentation}
+\begin{itemize} %NeED TO FIX THIS
 	\item 
 	\item Presents a new method of obfuscation related to adversarial data mining
 	\item Approach is explored in common setting of Internet search engines
@@ -182,10 +182,11 @@ eprint=false
 \end{frame}
 
 %------------------------------------------------
-\section{Second Section}
+\section{Method}
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{Personalised Advertising}
 
 \end{frame}
 
