pre battery death

--- a/Presentation Slides/PrivacyDefense.tex
+++ b/Presentation Slides/PrivacyDefense.tex
@@ -129,6 +129,7 @@ eprint=false
 
 %------------------------------------------------
 \section{Introduction}
+\subsection{Why we need to protect ourselves}
 \begin{frame}
 \frametitle{Companies can't be trusted}
 \begin{minipage}{0.4\textwidth}
@@ -137,7 +138,7 @@ eprint=false
 		\centering
 		\begin{figure}
 		\includegraphics[width=1\textwidth]{biggest-data-breaches.jpg}
-		\caption{www.csoonline.com/article/2130877/data-breach/the-16-biggest-data-breaches-of-the-21st-century.html}
+		%\caption{www.csoonline.com/article/2130877/data-breach/the-16-biggest-data-breaches-of-the-21st-century.html}
 		\end{figure}
 		\vfill
 	}
@@ -161,32 +162,68 @@ eprint=false
 
 \begin{frame}
 \frametitle{Other methods of obfuscation}
+\begin{minipage}{0.4\textwidth}
+	\vbox to \textheight{
+		\vfill
+		\centering
+		\begin{figure}
+			\includegraphics[width=1\textwidth]{torvproxyvvpn.jpg}
+			%\caption{www.csoonline.com/article/2130877/data-breach/the-16-biggest-data-breaches-of-the-21st-century.html}
+		\end{figure}
+		\vfill
+	}
+\end{minipage}\hfill
+\begin{minipage}{0.6\textwidth}
 \begin{itemize}
 	\item Private browsing - no cookies stored, but... IP still revealed
-	\item Proxy servers to hide IP - web browser fingerprints still revealed
+	\item Proxy servers to hide IP, but... web browser fingerprints still revealed
 	\item Ultimately, TOR for maximum anonymity
 	\item Problem - lose benefits that personalisation of websearches provides
 	\item Can an alternative means of securing privacy without more intensive [change intensive here] methods be found?
 \end{itemize}
+\end{minipage}
 \end{frame}
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Structure of Presentation}
-\begin{itemize} %NeED TO FIX THIS
-	\item 
-	\item Presents a new method of obfuscation related to adversarial data mining
+\begin{itemize} %NeED TO FIX THIS can do at end
+	\item How do search engines know what we want?
+	\item Present a new method of obfuscation related to adversarial data mining
 	\item Approach is explored in common setting of Internet search engines
 	\item A learning method is presented for environments where a user can get feedback from her or his counterpart
 \end{itemize}
 \end{frame}
 
+
+
+
 %------------------------------------------------
-\section{Method}
+\section{How do search engines know what we want?}
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Personalised Advertising}
+\begin{minipage}{0.4\textwidth}
+	\vbox to \textheight{
+		\vfill
+		\centering
+		\begin{figure}
+			\includegraphics[width=1\textwidth]{search_tree.png}
+			%\caption{www.csoonline.com/article/2130877/data-breach/the-16-biggest-data-breaches-of-the-21st-century.html}
+		\end{figure}
+		\vfill
+	}
+\end{minipage}\hfill
+\begin{minipage}{0.6\textwidth}
+	\begin{itemize}
+		\item Which ad  is displayed depends on 
+		\item Proxy servers to hide IP - web browser fingerprints still revealed
+		\item Ultimately, TOR for maximum anonymity
+		\item Problem - lose benefits that personalisation of websearches provides
+		\item Can an alternative means of securing privacy without more intensive [change intensive here] methods be found?
+	\end{itemize}
+\end{minipage}
 
 \end{frame}
 
