--- a/Presentation Slides/PrivacyDefense.tex
+++ b/Presentation Slides/PrivacyDefense.tex
@@ -217,11 +217,13 @@ eprint=false
 \end{minipage}\hfill
 \begin{minipage}{0.6\textwidth}
 	\begin{itemize}
-		\item Which ad  is displayed depends on 
-		\item Proxy servers to hide IP - web browser fingerprints still revealed
-		\item Ultimately, TOR for maximum anonymity
-		\item Problem - lose benefits that personalisation of websearches provides
-		\item Can an alternative means of securing privacy without more intensive [change intensive here] methods be found?
+		\item Which ad is displayed depends on:
+		\begin{itemize}
+			\item[--] The submitted query
+			\item[--] The user profile
+		\end{itemize}
+		\item Ads are assigned to categories
+		\item users are assigned to categories
 	\end{itemize}
 \end{minipage}
 
