--- a/Paper Review/PNASTMPL.tex
+++ b/Paper Review/PNASTMPL.tex
@@ -109,7 +109,7 @@
 %% For PNAS Only:
 \contributor{Submitted to Proceedings of the National Academy of Sciences of the United States of America}
 \url{www.pnas.org/cgi/doi/10.1073/pnas.0709640104}
-\copyrightyear{2008}
+\copyrightyear{2017}
 \issuedate{Issue Date}
 \volume{Volume}
 \issuenumber{Issue Number}
@@ -122,7 +122,7 @@
 %	TITLE AND AUTHORS
 %----------------------------------------------------------------------------------------
 
-\title{Title of the publication} % For titles, only capitalize the first letter
+\title{Review on ``The best privacy defense is a good privacy offense: obfuscating a search engine user's profile''} % For titles, only capitalize the first letter
 
 %------------------------------------------------
 
@@ -150,13 +150,11 @@
 %% Javier de Ruiz Garcia\affil{2}{Universidad de Murcia, Bioquimica y Biologia
 %% Molecular, Murcia, Spain}, \and Franklin Sonnery\affil{2}{}}
 
-\author{John Smith\affil{1}{University of California},
-James Smith\affil{2}{University of Oregon}
+\author{Joshua Fenech\affil{1}{Jean Monnet University},
 \and
-Jane Smith\affil{1}{}}
+Omar Elsabrout\affil{1}{University of Oregon}}
 
-\contributor{Submitted to Proceedings of the National Academy of Sciences
-of the United States of America}
+\contributor{Submitted to the faculty of science and technology at Jean Monnet University}
 
 %----------------------------------------------------------------------------------------
 
