--- a/Paper Review/PNASTMPL.tex
+++ b/Paper Review/PNASTMPL.tex
@@ -167,7 +167,7 @@ Omar Elsabrout\affil{1}{University of Oregon}}
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula metus sapien. Suspendisse pulvinar, felis ut hendrerit aliquet, dui nisi bibendum erat, fermentum mattis enim nibh id arcu. Vestibulum ultrices eros sed odio tincidunt bibendum. Pellentesque fermentum ante vel nulla commodo fermentum. Vestibulum in augue sit amet libero viverra accumsan eu at magna. Sed at ligula quis nibh pharetra facilisis non eu libero. Suspendisse non quam sit amet massa luctus interdum sit amet in purus. Integer id orci elit, vitae sollicitudin lectus.
+Since the growth rate of the Internet is almost exponential, it has a drastic effect on people's lives even the ones who do not use it. Such effect is accompanied with many issues such as user privacy. It is not settled until now how service providers are allowed to use stored information of the users and compromise their privacy. J\"{o}rg Wicker and Stefan Kramer introduce a tool that utilizes machine learning and data mining to confuse search engines to protect the user's privacy by obfuscating exploited personal information. Not only methods are introduced for such technique, but also an experiment to evaluate its results indicating whether this approach should be investigated further.
 \end{abstract}
 
 %------------------------------------------------
