--- a/Paper Review/PNASTMPL.tex
+++ b/Paper Review/PNASTMPL.tex
@@ -172,7 +172,7 @@ Since the growth rate of the Internet is almost exponential, it has a drastic ef
 
 %------------------------------------------------
 
-\keywords{Keyword1 | Keyword2 | Keyword3} % When adding keywords, separate each term with a straight line: |
+%\keywords{Keyword1 | Keyword2 | Keyword3} % When adding keywords, separate each term with a straight line: |
 
 %------------------------------------------------
 
@@ -183,7 +183,7 @@ Since the growth rate of the Internet is almost exponential, it has a drastic ef
 %% octadecyltrichlorosilane}
 
 % \abbreviations{}
-\abbreviations{SAM, self-assembled monolayer; OTS, octadecyltrichlorosilane}
+%\abbreviations{SAM, self-assembled monolayer; OTS, octadecyltrichlorosilane}
 
 %----------------------------------------------------------------------------------------
 %	PUBLICATION CONTENT
@@ -194,7 +194,8 @@ Since the growth rate of the Internet is almost exponential, it has a drastic ef
 
 \section{Introduction}
 
-\dropcap{N}am fermentum sapien at enim varius consectetur. Quisque lobortis imperdiet mauris, et accumsan libero vulputate vitae. Integer lacinia purus vel metus tempus suscipit. Curabitur ac sapien quis mauris euismod commodo. Sed pharetra sem elit. Fusce ultrices, mauris eu fermentum tempor, tellus sem ornare lectus, in convallis nunc urna id dolor. Donec convallis ligula vitae sem viverra fermentum. Mauris in ullamcorper erat. Donec ultrices tempus nibh quis vestibulum. This statement requires citation \cite{CLAcha1}.
+\dropcap{T}he motivation behind providing this approach is that the current privacy protection have major flaws. On one hand, users rely on service providers to process their data, on the other hand, providers do not have any advantage in user privacy preserving technologies as the analysis of this data and sharing it with advertisers is the basis of their business model. No doubt that providers such as search engines must store information on users. Nevertheless, these data can be used to generate detailed profiles on a large scale and identify unidentified users. As mentioned, J\"{o}rg Wicker and Stefan Kramer target privacy from another perspective. Hence, they suggest a user tools to defend her or his privacy so the user does not have to rely on the other uncontrollable side for this issue. Data is conventionally stored in large scales
+and analyzed automatically using data mining technologies. As a result, the intuitive approach to protect the user’s private information would be to flood the data storage with random data and hope the user’s interest or identity would be obfuscated. On the contrary, data mining algorithms are designed to distinguish a signal from random noise. Consequently, this approach will fail in most settings where the data is analyzed with sophisticated data mining algorithms. The paper tackles this issue in a more highly developed manner as it gives a brief discussion of the user and search engine model in addition to the proposed method. Moreover, it shows the details of the experimental set-up and results. Taking into account, the paper should be considered as proof-of-concept and not a final product ready for the market.\cite{CLAcha1}.
 
 \begin{equation}
 \mfrac{D \theta}{Dt}=\mfrac{\pr \theta}{\pr t} + u\cdot \nabla
@@ -205,9 +206,11 @@ Referencing equation \eqref{qg1}. Praesent volutpat, nibh in dignissim commodo, 
 
 %------------------------------------------------
 
-\section{Results}
+\section{Method}
 
 Mauris vel lorem magna, tristique auctor ipsum. Aliquam pharetra eleifend massa. Donec porttitor sagittis luctus. Aliquam pretium luctus leo quis congue. Morbi vel felis mi. Referencing Table \ref{sampletable}. Referencing Figure \ref{placeholder}.
+
+\section{Experiment}
 
 \subsection{Simulations}
 
