--- a/Paper Review/PNASTMPL.tex
+++ b/Paper Review/PNASTMPL.tex
@@ -217,7 +217,8 @@ In addition, obfuscating search engines and service providers waste their resour
 
 %\ref{placeholder}.
 
-\section{Experiment}
+\section{Method}
+Since the full knowledge of the states and information of the search engine are not available, the algorithm behaves according to only the feedback from the search engine in the form of ads.
 
 \subsection{Simulations}
 
